--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,43 @@
-.hello {
-    color: red;
-    background: url('./image.png');
+.headerContainer {
+    height: 100px;
+    
+    
+}
+
+.homeSubHeader {  
+  position: absolute;
+  top: 10%;
+  left: 35%;
+  transform: translate(-50%, -50%);
+}
+
+
+.menuSubHeader {    
+    position: absolute;
+    top: 10%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+
+.contactSubHeader {
+    position: absolute;
+    top: 10%;
+    left: 65%;
+    transform: translate(-50%, -50%);
+  }
+
+.subHeaderTxt {
+  font-family: Helvetica, sans-serif;
+  font-size: 40px;
+  color: black; 
+  text-decoration: none;
+}
+
+.smallImage {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 70%;
+
 }
